[gd_scene load_steps=2 format=3 uid="uid://11fq7hm2gq3y"]

[ext_resource type="Script" path="res://settings.gd" id="1_dk8of"]

[node name="settings" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dk8of")

[node name="SettingsTitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 125.0
offset_bottom = 46.0
theme_type_variation = &"HeaderLarge"
text = "Settings:"

[node name="TabContainer" type="TabContainer" parent="SettingsTitleLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = 39.0
offset_right = 1085.5
offset_bottom = 623.0
grow_horizontal = 2
grow_vertical = 2

[node name="Theme" type="Panel" parent="SettingsTitleLabel/TabContainer"]
layout_mode = 2

[node name="SlotHeader" type="Label" parent="SettingsTitleLabel/TabContainer/Theme"]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 64.0
offset_bottom = 46.0
theme_type_variation = &"HeaderMedium"
text = "Slots:"

[node name="DefaultColorLabel" type="Label" parent="SettingsTitleLabel/TabContainer/Theme/SlotHeader"]
layout_mode = 0
offset_left = 32.0
offset_top = 40.0
offset_right = 139.0
offset_bottom = 66.0
text = "Default Color:"

[node name="DefaultColor" type="ColorPickerButton" parent="SettingsTitleLabel/TabContainer/Theme/SlotHeader/DefaultColorLabel"]
layout_mode = 0
offset_left = 152.0
offset_right = 280.0
offset_bottom = 24.0

[node name="TakenColorLabel" type="Label" parent="SettingsTitleLabel/TabContainer/Theme/SlotHeader"]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 139.0
offset_bottom = 98.0
text = "Taken Color:"

[node name="TakenColor" type="ColorPickerButton" parent="SettingsTitleLabel/TabContainer/Theme/SlotHeader/TakenColorLabel"]
layout_mode = 0
offset_left = 152.0
offset_right = 280.0
offset_bottom = 24.0

[node name="StackableColorLabel" type="Label" parent="SettingsTitleLabel/TabContainer/Theme/SlotHeader"]
layout_mode = 0
offset_left = 32.0
offset_top = 104.0
offset_right = 157.0
offset_bottom = 130.0
text = "Stackable Color:"

[node name="StackableColor" type="ColorPickerButton" parent="SettingsTitleLabel/TabContainer/Theme/SlotHeader/StackableColorLabel"]
layout_mode = 0
offset_left = 152.0
offset_right = 280.0
offset_bottom = 24.0

[node name="FreeColorLabel" type="Label" parent="SettingsTitleLabel/TabContainer/Theme/SlotHeader"]
layout_mode = 0
offset_left = 32.0
offset_top = 136.0
offset_right = 157.0
offset_bottom = 162.0
text = "Free Color:"

[node name="FreeColor" type="ColorPickerButton" parent="SettingsTitleLabel/TabContainer/Theme/SlotHeader/FreeColorLabel"]
layout_mode = 0
offset_left = 152.0
offset_right = 280.0
offset_bottom = 24.0

[node name="ExitButton" type="Button" parent="SettingsTitleLabel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 995.0
offset_right = 1019.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[connection signal="color_changed" from="SettingsTitleLabel/TabContainer/Theme/SlotHeader/DefaultColorLabel/DefaultColor" to="." method="_on_default_color_color_changed"]
[connection signal="color_changed" from="SettingsTitleLabel/TabContainer/Theme/SlotHeader/TakenColorLabel/TakenColor" to="." method="_on_taken_color_color_changed"]
[connection signal="color_changed" from="SettingsTitleLabel/TabContainer/Theme/SlotHeader/StackableColorLabel/StackableColor" to="." method="_on_stackable_color_color_changed"]
[connection signal="color_changed" from="SettingsTitleLabel/TabContainer/Theme/SlotHeader/FreeColorLabel/FreeColor" to="." method="_on_free_color_color_changed"]
[connection signal="pressed" from="SettingsTitleLabel/ExitButton" to="." method="_on_exit_button_pressed"]
